examples/test/testpolicy15094.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15094
  namespace: namespace378
spec:
  podSelector:
    matchLabels:
      key18: value27
      key23: value29
      key3: value46
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key48: value28
          key43: value30
          key33: value9
      podSelector:
        matchLabels:
          key3: value29
          key25: value45
